--- a/app/src/main/res/layout/wheel_view.xml
+++ b/app/src/main/res/layout/wheel_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <com.stupidpeople.cuentame.WheelView
+    <com.stupidpeople.cuentanos.experiments.WheelView
         android:id="@+id/wheel_view_wv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
