UI estandarizadas incorporado notificación Cambiado uterance para evitar errores

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,24 +12,29 @@
 
         <Button
             android:id="@+id/btn_play_stop"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:onClick="onClickPlayStop"
             android:text="play" />
 
         <Button
-            android:id="@+id/btn_next"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:onClick="onClickNext"
             android:text="next" />
 
         <Button
-            android:id="@+id/btn_like"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:onClick="onClickLike"
             android:text="like" />
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClickDicc"
+            android:text="Dicc" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -54,7 +59,6 @@
             android:inputType="number" />
 
         <Button
-            android:id="@+id/btn_go"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="onClickGo"
