Creación de mp3s de la lectura con el sintetizador. Son ubicados en la memoria sd. Se generan ficheros de texto con el texto, para realizar posteriormente tf-idf y así nombrar cada uno de las "canciones" (que se realizarán uniendo 15 cápsulas.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,10 +59,17 @@
             android:inputType="number" />
 
         <Button
-            android:layout_width="100dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:onClick="onClickGo"
             android:text="go" />
+
+        <Button
+            android:id="@+id/wav"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClickWav"
+            android:text="wav" />
     </LinearLayout>
 
     <TextView
@@ -83,7 +90,7 @@
         android:layout_height="wrap_content"
         android:text="TEXT"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="14dp" />
+        android:textSize="10sp" />
 
 
     <!--<Button-->
